--- a/Front-end/src/index.css
+++ b/Front-end/src/index.css
@@ -6,9 +6,15 @@ html {
   color: #2c3e50;
 }
 
-body {
+:root {
   margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
